# fastapi-party

./: .gitignore  db.py  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3ba497661880_initial_migration.py
party_app/: main.py  models.py
party_app/initial_data/: load_initial_data_to_db.py
party_app/routes/: main.py  party_detail.py  party_list.py
party_app/static/css/: output.css
party_app/static/src/: input.css
party_app/templates/: base.html
party_app/templates/party_detail/: page_party_detail.html  partial_party_detail.html  partial_party_edit.html
party_app/templates/party_list/: page_party_list.html
party_app/tests/: conftest.py  test_party_detail.py
