[project]
name = "fastapi-party"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco De La Cruz",email = "helloquico@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (==1.14)",
    "fastapi[standard] (==0.115.11)",
    "pytest (==8.3)",
    "sqlmodel (==0.0.24)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
